.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:35:38 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:12:10: fatal error: stdio: No such file or directory
 #include <stdio>
          ^~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:27: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
10:35:52 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:12:10: fatal error: std.io: No such file or directory
 #include <std.io>
          ^~~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:27: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
10:36:07 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:15:1: warning: return type defaults to 'int' [-Wimplicit-int]
 main(){
 ^~~~
../Src/main.c: In function 'main':
../Src/main.c:23:22: warning: implicit declaration of function 'getchar' [-Wimplicit-function-declaration]
   ch_arr[lastchar] = getchar();
                      ^~~~~~~
../Src/main.c:52:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   printf("%c\n", ch_arr[count1]);
   ^~~~~~
../Src/main.c:52:3: warning: incompatible implicit declaration of built-in function 'printf'
../Src/main.c:52:3: note: include '<stdio.h>' or provide a declaration of 'printf'
arm-none-eabi-gcc -o "Lab 1.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bretzj\Desktop\embedded\Lab 1\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab 1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab 1.elf
 
arm-none-eabi-objdump -h -S  Lab\ 1.elf  > "Lab 1.list"
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23004	    472	   1584	  25060	   61e4	Lab 1.elf
Finished building: default.size.stdout
 
Finished building: Lab 1.list
 
10:36:42 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:11:10: fatal error: stdio: No such file or directory
 #include <stdio>
          ^~~~~~~
compilation terminated.
make: *** [Src/subdir.mk:27: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
10:39:04 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Lab 1.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bretzj\Desktop\embedded\Lab 1\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab 1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab 1.elf
 
arm-none-eabi-objdump -h -S  Lab\ 1.elf  > "Lab 1.list"
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23004	    472	   1584	  25060	   61e4	Lab 1.elf
Finished building: default.size.stdout
 
Finished building: Lab 1.list
 
10:39:39 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:17:20: error: 'F_CPU' undeclared (first use in this function); did you mean 'FD_CLR'?
  init_usart2(19200,F_CPU);
                    ^~~~~
                    FD_CLR
../Src/main.c:17:20: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:27: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
10:40:00 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Lab 1.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bretzj\Desktop\embedded\Lab 1\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab 1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab 1.elf
 
arm-none-eabi-objdump -h -S  Lab\ 1.elf  > "Lab 1.list"
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
Finished building: Lab 1.list
 
10:40:22 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:41:17 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Lab 1.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bretzj\Desktop\embedded\Lab 1\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab 1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab 1.elf
 
arm-none-eabi-objdump -h -S  Lab\ 1.elf  > "Lab 1.list"
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
Finished building: Lab 1.list
 
10:43:14 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:45:57 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:48:31 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:49:07 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:50:02 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
10:54:11 **** Incremental Build of configuration Debug for project Lab 1 ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Lab 1.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\bretzj\Desktop\embedded\Lab 1\STM32F446RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab 1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab 1.elf
 
arm-none-eabi-objdump -h -S  Lab\ 1.elf  > "Lab 1.list"
arm-none-eabi-size   Lab\ 1.elf 
   text	   data	    bss	    dec	    hex	filename
  23540	    472	   1584	  25596	   63fc	Lab 1.elf
Finished building: default.size.stdout
 
Finished building: Lab 1.list
 
